# testament

./: Anchor.toml  Cargo.toml  README.md  SCOPE.md  package-lock.json  package.json
.cargo/: config.toml
.claude/: settings.local.json
app/: package-lock.json  package.json
app/app/: layout.tsx  page.tsx
app/app/.well-known/solana-actions.json/: route.ts
app/app/api/actions.json/: route.ts
app/app/api/keeper/: route.ts
app/app/api/stats/: route.ts
app/app/claim/: page.tsx
app/app/create/: page.tsx
app/app/dashboard/: page.tsx
app/app/recover/: page.tsx
app/components/: Nav.tsx  WalletProvider.tsx
app/hooks/: useVault.ts
app/lib/: emailRegistry.ts  idl.json  passkey.ts  program.ts  secp256r1.ts  testament.ts
patches/toml_datetime/: Cargo.toml
patches/toml_edit/: Cargo.toml
patches/toml_parser/: Cargo.toml
programs/testament/: Cargo.toml
programs/testament/src/: errors.rs  lib.rs
programs/testament/src/instructions/: add_beneficiary.rs  add_guardian.rs  claim.rs  claim_spl.rs  close_vault.rs  create_vault.rs  deposit.rs  deposit_spl.rs  dispute.rs  execute_inheritance.rs  execute_sol_inheritance.rs  guardian_heartbeat.rs  heartbeat.rs  lock_vault.rs  mod.rs  recover_with_passkey.rs  register_delegation.rs  register_passkey.rs  register_recovery_wallet.rs  register_sol_delegation.rs  revoke_delegation.rs  revoke_sol_delegation.rs  transfer_ownership.rs  trigger_countdown.rs
programs/testament/src/state/: beneficiary.rs  delegation_record.rs  guardian_config.rs  mod.rs  (+3 more)
scripts/: run-keeper.sh  test-flow.ts
tests/: testament.ts
(+6 files in other folders)
