[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# toml_parser 1.1.2 declares edition = "2024" but uses no edition2024 features.
# The Solana BPF toolchain (Rust 1.84.1) predates edition2024 support (1.85+).
# This local patch downgrades the edition declaration to 2021 so the BPF Cargo
# can parse the manifest. Remove once the BPF toolchain reaches 1.85+.
toml_parser = { path = "patches/toml_parser" }
toml_datetime = { path = "patches/toml_datetime" }
toml_edit = { path = "patches/toml_edit" }
